164049044:- alignment fixes

--- a/PlatformUI3/src/app/com/cognizant/devops/platformui/login/login.component.css
+++ b/PlatformUI3/src/app/com/cognizant/devops/platformui/login/login.component.css
@@ -123,7 +123,7 @@
   margin-top: 0px;
 }
 .validCredTextCss{
-  font-size: 1.3vmax;
+  font-size: 1.1vmax;
   color: #0033A0;
   margin-bottom: 20px;
   /*  margin-left: 1px; */
@@ -162,10 +162,10 @@
   color: #00728f !important;
 }
 .wfTopAlign{
-  margin-top: 95px;
+  margin-top: 5vmax;
 }
 .textPad{
-  padding-left:50px;
+  /* padding-left:100px; */
   padding-top:7vmax;  
 }
 .topTxtCss{
@@ -193,7 +193,7 @@
   margin-left: 335px;
 }
 .actvIcoCss{
-  margin-left: -2px;
+  margin-left: -10px;
   
 }
 
@@ -315,6 +315,10 @@ md-icon {
 .column-image{
   margin-left: 5%;
 }
+.textPad{
+  padding-left:100px;
+}
+
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -326,5 +330,8 @@ md-icon {
 }
 .column-image{
   margin-left: 5%;
+}
+.textPad{
+  padding-left:50px;
 }
 }
